added basic - HATEOAS feature to all