@@ -1,65 +1,63 @@
 package asksef.controller;
 
 import asksef.assembler.CityModelAssembler;
+import asksef.assembler_support.CityModelAssemblerSupport;
 import asksef.entity.City;
-import asksef.entity.service_impl.CityService;
+import asksef.entity.entity_model.CityModel;
+import asksef.entity.repository.CityRepository;
+import asksef.entity.service.CityService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.IanaLinkRelations;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @RestController
-@RequestMapping(value = "/v0/city")
+@RequestMapping(value = "/api/city")
 public class CityController {
 
     private static final Logger log = LoggerFactory.getLogger(CityController.class);
     private final CityService cityService;
     private final CityModelAssembler cityModelAssembler;
+    private final CityRepository cityRepository;
+    private final CityModelAssemblerSupport assemblerSupport;
 
     public CityController(CityService cityService,
-                          CityModelAssembler cityModelAssembler) {
+                          CityModelAssembler cityModelAssembler, CityRepository cityRepository,
+                          CityModelAssemblerSupport cityModelAssemblerSupport) {
         this.cityService = cityService;
         this.cityModelAssembler = cityModelAssembler;
-        log.info("Inside CityController");
+        this.cityRepository = cityRepository;
+        this.assemblerSupport = cityModelAssemblerSupport;
     }
 
     @GetMapping(value = "/all")
-    @ResponseStatus(HttpStatus.OK)
-    public CollectionModel<EntityModel<City>> all() {
-        List<EntityModel<City>> entityModelList = this.cityService.findAll().
-                stream().map(cityModelAssembler::toModel).collect(Collectors.toList());
-        log.info("Found {} cities", entityModelList.size());
-        return CollectionModel.of(entityModelList,
-                linkTo(methodOn(CityController.class).all()).withSelfRel());
+    public ResponseEntity<CollectionModel<CityModel>> all() {
+        List<City> entityList = this.cityService.findAll().stream().toList();
+        return new ResponseEntity<>(this.assemblerSupport.toCollectionModel(entityList), HttpStatus.OK);
     }
 
     @GetMapping(value = "/{id}")
-    @ResponseStatus(HttpStatus.OK)
-    public EntityModel<City> one(@PathVariable("id") Long id) {
-        City city = this.cityService.findById(id);
-        return this.cityModelAssembler.toModel(city);
+    public ResponseEntity<CityModel> one(@PathVariable("id") Long id) {
+       return this.cityRepository.findById(id)
+               .map(assemblerSupport::toModel)
+               .map(ResponseEntity::ok)
+               .orElse(ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/delete/{id}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public ResponseEntity<?> delete(@PathVariable Long id) {
-        log.info("Delete city with id: {}", id);
+    public ResponseEntity<?> delete(@PathVariable("id") Long id) {
         this.cityService.delete(id);
         return new ResponseEntity<>("City entity deleted successfully.", HttpStatus.NO_CONTENT);
     }
-
-    ///         ///////////////////////////////////////////////////////////
 
 //    @PostMapping(path = "/add",
 //            produces = "application/ld+json"
@@ -80,17 +78,15 @@ public class CityController {
 //                .created(linkTo(methodOn(CityController.class).add(savedCity)).toUri()).body(entityModel);
 //    }
     @PostMapping(path = "/add", produces = "application/json")
-    @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<EntityModel<City>> add(@RequestBody City newCity) throws Exception {
-        City savedCity = cityService.save(newCity);
-        EntityModel<City> entityModel = this.cityModelAssembler.toModel(savedCity);
-
-        log.info("Inside add to save city {}", savedCity);
-        return //new ResponseEntity<>(savedCity, HttpStatus.CREATED);
-        ResponseEntity.created(linkTo(methodOn(CityController.class)
-                .add(savedCity)).toUri()).body(entityModel);
-                //entityModel
-                //.getRequiredLink(IanaLinkRelations.SELF).toUri()).body(entityModel);
+       public ResponseEntity<CityModel> add(@RequestBody CityModel cityModel)  {
+        City savedCity = cityService.save(cityModel);
+        CityModel entityModel = this.assemblerSupport.toModel(savedCity);
+//        EntityModel<City> entityModel = this.cityModelAssembler.toModel(savedCity);
+//        log.info("Inside add to save city {}", savedCity);
+        return new ResponseEntity<>(entityModel, HttpStatus.CREATED);
+//                ResponseEntity.created(linkTo(methodOn(CityController.class)
+//                        .add(savedCity)).toUri()).body(entityModel);        //entityModel
+        //.getRequiredLink(IanaLinkRelations.SELF).toUri()).body(entityModel);
     }
 
     @PutMapping("/update/{id}")
